--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,9 @@ dependencies:
   http: 0.13.4
   flutter:
     sdk: flutter
-  firebase_core: 1.8.0
-  # firebase_auth: 0.20.1
-  # google_sign_in: 4.5.1
+  # firebase_core: 1.8.0
+  # firebase_auth: 3.1.4
+  google_sign_in: 5.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
